--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     <meta property="og:description" content="Senior Software Engineer & Freelance Full-Stack PHP Developer specializing in Laravel, CodeIgniter, WordPress, Core PHP, API development and integrations." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://ankitaparmar.github.io/" />
-    <meta property="og:image" content="https://ankitaparmar.github.io/ankita-parmar-profile.jpg" />
+    <meta property="og:image" content="https://ankitaparmar.github.io/ankita-parmar-profile.png" />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Ankita Parmar | Freelance PHP Developer" />
     <meta name="twitter:description" content="Freelance Full-Stack PHP Developer with 10+ years experience in Laravel, Core PHP, APIs and MySQL." />
-    <meta name="twitter:image" content="https://ankitaparmar.github.io/ankita-parmar-profile.jpg" />
+    <meta name="twitter:image" content="https://ankitaparmar.github.io/ankita-parmar-profile.png" />
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://ankitaparmar.github.io/" />
@@ -36,7 +36,7 @@
         "name": "Ankita Parmar",
         "jobTitle": "Senior Software Engineer & Freelance Full-Stack PHP Developer",
         "url": "https://ankitaparmar.github.io/",
-        "image": "https://ankitaparmar.github.io/ankita-parmar-profile.jpg",
+        "image": "https://ankitaparmar.github.io/ankita-parmar-profile.png",
         "sameAs": [
             "https://www.linkedin.com/in/ankita-parmar-42684b168/",
             "https://github.com/Ankitap-dev"
@@ -110,7 +110,7 @@
   <div class="wrapper">
     <div class="card">
 
-      <img src="ankita-parmar-profile.jpg" alt="Ankita Parmar, Freelance Full-Stack PHP Developer" class="profile">
+      <img src="ankita-parmar-profile.png" alt="Ankita Parmar, Freelance Full-Stack PHP Developer" class="profile">
 
       <h1>Ankita Parmar – Freelance Full-Stack PHP Developer</h1>
       <div class="subtitle">
